--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "autosuggest-highlight": "^3.1.1",
+    "axios": "^0.19.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "react": "^16.10.1",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.10.1",
+    "react-moment": "^0.9.2",
     "react-scripts": "3.1.2"
   },
   "scripts": {
