--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "nutrinionix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://greixs.github.io/2hats-nutritionix",
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "react": "^16.10.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
